cluster-cd/apps/bitty/downloads/readarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name readarr
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: *name
    app.kubernetes.io/part-of: *name
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
      app.kubernentes.io/component: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
        app.kubernentes.io/component: *name
        setGateway: "true"
    spec:
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 100
      containers:
        - name: readarr
          image: ghcr.io/onedr0p/readarr-develop:0.3.29.2565
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 250Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 568
            runAsGroup: 568
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
        - name: exportarr
          image: ghcr.io/onedr0p/exportarr:v2.0.1
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 568
            runAsGroup: 568
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 64Mi
          args:
            - readarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: readarr
        - name: media
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media
